[workspace]
resolver = "2"
members = [
    "bign-genk",
    "dsa",
    "ecdsa",
    "ed448",
    "ed25519",
    "lms",
    "ml-dsa",
    "rfc6979",
    "slh-dsa",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
# A global patch crates-io block is used to avoid duplicate dependencies
# when pulling a member crate through git
dsa = { path = "./dsa" }
ecdsa = { path = "./ecdsa" }
ed448 = { path = "./ed448" }
ed25519 = { path = "./ed25519" }
lms-signature = { path = "./lms" }
ml-dsa = { path = "./ml-dsa" }
rfc6979 = { path = "./rfc6979" }
slh-dsa = { path = "./slh-dsa" }
bign-genk = { path = "./bign-genk" }

elliptic-curve = { git = "https://github.com/RustCrypto/traits" }
ff = { git = "https://github.com/tarcieri/ff", branch = "rand_core/v0.10.0-rc-2" }
group = { git = "https://github.com/tarcieri/group", branch = "rand_core/v0.10.0-rc-2" }
