[workspace]
resolver = "2"
members = [
    "dsa",
    "ecdsa",
    "ed448",
    "ed25519",
    "lms",
    "ml-dsa",
    "rfc6979",
    "slh-dsa",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
# A global patch crates-io block is used to avoid duplicate dependencies
# when pulling a member crate through git
dsa = { path = "./dsa" }
ecdsa = { path = "./ecdsa" }
ed448 = { path = "./ed448" }
ed25519 = { path = "./ed25519" }
lms-signature = { path = "./lms" }
ml-dsa = { path = "./ml-dsa" }
rfc6979 = { path = "./rfc6979" }
slh-dsa = { path = "./slh-dsa" }

# https://github.com/rust-random/rand/pull/1697
rand = { git = "https://github.com/rust-random/rand", rev = "99ae06fb348e5c5fee0fe41d2201bd4cbb107635" }
getrandom = { git = "https://github.com/rust-random/getrandom.git", rev = "f67c70110f706f80d7dd6fa52e38d0920754fe2c" }
