[package]
name = "dsa"
version = "0.7.0-rc.3"
description = """
Pure Rust implementation of the Digital Signature Algorithm (DSA) as specified
in FIPS 186-4 (Digital Signature Standard), providing RFC6979 deterministic
signatures as well as support for added entropy
"""
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
homepage = "https://github.com/RustCrypto/signatures/tree/master/dsa"
repository = "https://github.com/RustCrypto/signatures"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "nist", "signature"]
rust-version = "1.85"

[dependencies]
der = { version = "0.8.0-rc.7", features = ["alloc"] }
digest = "0.11.0-rc.0"
crypto-bigint = { version = "=0.7.0-pre.7", default-features = false, features = ["alloc", "zeroize"] }
crypto-primes = { version = "=0.7.0-pre.1", default-features = false }
rfc6979 = { version = "0.5.0-rc.0" }
sha2 = { version = "0.11.0-rc.0", default-features = false }
signature = { version = "3.0.0-rc.2", default-features = false, features = ["alloc", "digest", "rand_core"] }
zeroize = { version = "1", default-features = false, features = ["alloc"] }

# optional dependencies
pkcs8 = { version = "0.11.0-rc.6", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
hex = "0.4.3"
hex-literal = "1"
pkcs8 = { version = "0.11.0-rc.6", default-features = false, features = ["pem"] }
proptest = "1"
rand = "0.9"
rand_chacha = "0.9"
sha1 = "0.11.0-rc.0"
der = { version = "0.8.0-rc.6", features = ["derive"] }

[features]
default = ["pkcs8"]
hazmat = []

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "sign"
required-features = ["hazmat", "pkcs8"]

[[example]]
name = "generate"
required-features = ["hazmat"]

[[example]]
name = "export"
required-features = ["hazmat", "pkcs8"]
