[package]
name          = "ed25519"
version       = "1.0.0-pre.0"
authors       = ["RustCrypto Developers"]
license       = "Apache-2.0 OR MIT"
description   = "Edwards Digital Signature Algorithm (EdDSA) over Curve25519 (as specified in RFC 8032)"
documentation = "https://docs.rs/ed25519"
repository    = "https://github.com/RustCrypto/signatures"
edition       = "2018"
readme        = "README.md"
categories    = ["cryptography", "no-std"]
keywords      = ["crypto", "curve25519", "ecc", "signature", "signing"]

[dependencies]
signature = { version = "1.0.0-pre.0", path = "../signature-crate", default-features = false }
