[package]
name          = "ed25519"
version       = "1.1.1"
authors       = ["RustCrypto Developers"]
license       = "Apache-2.0 OR MIT"
description   = "Edwards Digital Signature Algorithm (EdDSA) over Curve25519 (as specified in RFC 8032)"
documentation = "https://docs.rs/ed25519"
repository    = "https://github.com/RustCrypto/signatures"
edition       = "2018"
readme        = "README.md"
categories    = ["cryptography", "no-std"]
keywords      = ["crypto", "curve25519", "ecc", "signature", "signing"]

[dependencies]
signature = { version = "1", default-features = false }
serde = { version = "1", optional = true, default-features = false }

[dev-dependencies]
bincode = "1"
ed25519-dalek = "1"
ring-compat = "0.2"
rand_core = { version = "0.6", features = ["std"] }

[features]
default = ["std"]
std = ["signature/std"]
