[package]
name = "ed25519"
version = "3.0.0-rc.2"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Edwards Digital Signature Algorithm (EdDSA) over Curve25519 (as specified in RFC 8032)
support library providing signature type definitions and PKCS#8 private key
decoding/encoding support
"""
documentation = "https://docs.rs/ed25519"
homepage = "https://github.com/RustCrypto/signatures/tree/master/ed25519"
repository = "https://github.com/RustCrypto/signatures"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "curve25519", "ecc", "signature", "signing"]
edition = "2024"
rust-version = "1.85"

[dependencies]
signature = { version = "3.0.0-rc.9", default-features = false }

# optional dependencies
pkcs8 = { version = "0.11.0-rc.10", optional = true }
serde = { version = "1", optional = true, default-features = false }
serde_bytes = { version = "0.11", optional = true, default-features = false }
zeroize = { version = "1", optional = true, default-features = false }
zerocopy = { version = "0.8", optional = true, features = ["derive"] }

[dev-dependencies]
#ed25519-dalek = { version = "2", features = ["rand_core"] }
hex-literal = "1"
#ring-compat = { version = "0.8", default-features = false, features = ["signature"] }
rand_core = { version = "0.9", features = ["std"] }

[features]
default = ["alloc"]
alloc = ["pkcs8?/alloc"]
pem = ["alloc", "pkcs8/pem"]
serde_bytes = ["serde", "dep:serde_bytes"]

[package.metadata.docs.rs]
all-features = true
