[package]
name = "ed448-signature"
version = "0.0.0"
edition = "2021"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Edwards Digital Signature Algorithm (EdDSA) over Curve448 (as specified in RFC 7748)
support library providing signature type definitions and PKCS#8 private key
decoding/encoding support
"""
documentation = "https://docs.rs/ed448-signature"
homepage = "https://github.com/RustCrypto/signatures/tree/master/ed448"
repository = "https://github.com/RustCrypto/signatures"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "curve448", "ecc", "signature", "signing"]
rust-version = "1.81"

[dependencies]
# TODO(tarcieri): relax requirement back to `2` before next release
signature = { version = "=2.3.0-pre.4", default-features = false }

# optional dependencies
pkcs8 = { version = "=0.11.0-rc.1", optional = true }
serde = { version = "1", optional = true, default-features = false }
serde_bytes = { version = "0.11", optional = true }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "0.4"
bincode = "1"

[features]
default = ["std"]
alloc = ["pkcs8?/alloc"]
pem = ["alloc", "pkcs8/pem"]
serde_bytes = ["serde", "dep:serde_bytes"]
std = ["signature/std"]
