[package]
name = "ed448"
version = "0.5.0-rc.2"
edition = "2024"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Edwards Digital Signature Algorithm (EdDSA) over Curve448 (as specified in
RFC8032) support library providing signature type definitions and PKCS#8
private key decoding/encoding support
"""
documentation = "https://docs.rs/ed448"
homepage = "https://github.com/RustCrypto/signatures/tree/master/ed448"
repository = "https://github.com/RustCrypto/signatures"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "curve448", "ecc", "signature", "signing"]
rust-version = "1.85"

[dependencies]
signature = { version = "3.0.0-rc.6", default-features = false }

# optional dependencies
pkcs8 = { version = "0.11.0-rc.8", optional = true }
serde = { version = "1", optional = true, default-features = false }
serde_bytes = { version = "0.11", optional = true, default-features = false }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "1"

[features]
default = ["alloc"]
alloc = ["pkcs8?/alloc"]
pem = ["alloc", "pkcs8/pem"]
serde_bytes = ["serde", "dep:serde_bytes"]

[package.metadata.docs.rs]
all-features = true
