[package]
name = "lms-signature"
description = "Pure Rust implementation of Leighton-Micali Hash-Based Signatures (RFC 8554)"
version = "0.1.0-rc.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/signatures/tree/master/lms"
repository = "https://github.com/RustCrypto/signatures"
readme = "README.md"
rust-version = "1.85"
categories = ["cryptography"]
keywords = ["crypto", "signature"]

[dependencies]
digest = "0.11.0-rc.4"
hybrid-array = { version = "0.4", features = ["extra-sizes", "zeroize"] }
rand = "0.10.0-rc.1"
sha2 = "0.11.0-rc.3"
static_assertions = "1.1"
rand_core = "0.10.0-rc-2"
signature = { version = "3.0.0-rc.5", features = ["alloc", "digest", "rand_core"] }
typenum = { version = "1.17", features = ["const-generics"] }
zeroize = "1.8"

[dev-dependencies]
hex = "0.4"
hex-literal = "1"
