[package]
name = "ml-dsa"
description = """
Pure Rust implementation of ML-DSA (formerly known as CRYSTALS-Dilithium) as
described in FIPS-204 (final)
"""
version = "0.1.0-rc.5"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/signatures/tree/master/ml-dsa"
repository = "https://github.com/RustCrypto/signatures"
readme = "README.md"
categories = ["cryptography"]
keywords = ["crypto", "signature"]
# Exclude these large files in published crate:
exclude = [
    "tests/key-gen.json",
    "tests/key-gen.rs",
    "tests/proptests.proptest-regressions",
    "tests/sig-gen.json",
    "tests/sig-gen.rs",
    "tests/sig-ver.json",
    "tests/sig-ver.rs",
]

[features]
default = ["rand_core", "alloc", "pkcs8"]
zeroize = ["dep:zeroize", "hybrid-array/zeroize", "module-lattice/zeroize"]
rand_core = ["dep:rand_core", "signature/rand_core"]
alloc = ["pkcs8?/alloc"]
pkcs8 = ["dep:const-oid", "dep:pkcs8"]

[dependencies]
hybrid-array = { version = "0.4", features = ["extra-sizes"] }
module-lattice = "0.1.0-rc.0"
sha3 = { version = "0.11.0-rc.6", default-features = false }
signature = { version = "3.0.0-rc.10", default-features = false, features = ["digest"] }

# optional dependencies
const-oid = { version = "0.10", features = ["db"], optional = true }
pkcs8 = { version = "0.11.0-rc.10", default-features = false, optional = true }
rand_core = { version = "0.10.0-rc-6", optional = true }
zeroize = { version = "1.8.1", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.7"
getrandom = { version = "0.4.0", features = ["sys_rng"] }
hex = { version = "0.4", features = ["serde"] }
hex-literal = "1"
pkcs8 = { version = "0.11.0-rc.10", features = ["pem"] }
proptest = "1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"

[[bench]]
name = "ml_dsa"
harness = false
