[package]
name    = "rfc6979"
version = "0.4.0"
description = """
Pure Rust implementation of RFC6979: Deterministic Usage of the
Digital Signature Algorithm (DSA) and Elliptic Curve Digital Signature Algorithm (ECDSA)
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/signatures/tree/master/rfc6979"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["dsa", "ecdsa", "signature"]
edition = "2021"
rust-version = "1.61"

[dependencies]
hmac = { version = "0.12", default-features = false, features = ["reset"] }
subtle = { version = "2", default-features = false }

[dev-dependencies]
hex-literal = "0.3"
sha2 = "0.10"
