[package]
name = "rsa-signature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = { version = "0.10.3" }
signature = { version = "1.5", default-features = false, features = ["rand-preview"] }

[features]
default = []
alloc = []
sign = []
std = ["alloc", "signature/std"]
verify = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
