[package]
name          = "signature"
version       = "0.1.0"
authors       = ["RustCrypto Developers"]
license       = "Apache-2.0 OR MIT"
description   = "Traits for cryptographic signature algorithms (e.g. ECDSA, Ed25519)"
documentation = "https://docs.rs/signature"
repository    = "https://github.com/RustCrypto/signatures/tree/master/signature-crate"
readme        = "README.md"
edition       = "2018"
keywords      = ["crypto", "ecdsa", "ed25519", "signature", "signing"]
categories    = ["cryptography", "no-std"]

[dependencies]
digest = { version = "0.8", optional = true, default-features = false }
signature_derive = { version = "0", optional = true, path = "signature_derive" }

[dev-dependencies]
hex-literal = "0.2"
sha2 = { version = "0.8", default-features = false }

[features]
default = ["digest", "std"]
alloc   = []
std     = ["alloc"]
